--- a/my-balsamiq-design/src/app/app.component.html
+++ b/my-balsamiq-design/src/app/app.component.html
@@ -5,19 +5,19 @@
   </h1>
 <ul>
   <li>
-    <img src="E:\star\universe\my-ux-designs\src\assets/homepage.jpg" alt="refuse-homepage">
+    <img src="src/assets/android.jpg" alt="homepage">
   </li>
   <li>
-    <img src="E:\star\universe\my-ux-designs\src\assets/homepage.jpg" alt="refuse-homepage">
+    <img src="src/assets/android1.jpg" alt="homepage">
   </li>
   <li>
-    <img src="E:\star\universe\my-ux-designs\src\assets/homepage.jpg" alt="refuse-homepage">
+    <img src="src/assets/home_page.jpg" alt="homepage">
   </li>
   <li>
-    <img src="E:\star\universe\my-ux-designs\src\assets/homepage.jpg" alt="refuse-homepage">
+    <img src="src/assets/NewProject.jpg" alt="homepage">
   </li>
   <li>
-    <img src="E:\star\universe\my-ux-designs\src\assets/homepage.jpg" alt="refuse-homepage">
+    <img src="src/assets/profile.jpg" alt="homepage">
   </li>
 </ul>
 </div>
