--- a/my-balsamiq-design/src/styles.css
+++ b/my-balsamiq-design/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+li {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+body {
+    color: white;
+    background-color: black;
+}
