--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,19 +5,19 @@
   </h1>
 <ul>
   <li>
-    <img src="/assets/android.jpg" alt="homepage">
+    <img src="/assets/android.png" alt="homepage">
   </li>
   <li>
-    <img src="/assets/android1.jpg" alt="homepage">
+    <img src="/assets/android1.png" alt="homepage">
   </li>
   <li>
-    <img src="/assets/home_page.jpg" alt="homepage">
+    <img src="/assets/home_page.png" alt="homepage">
   </li>
   <li>
-    <img src="/assets/NewProject.jpg" alt="homepage">
+    <img src="/assets/NewProject.png" alt="homepage">
   </li>
   <li>
-    <img src="/assets/profile.jpg" alt="homepage">
+    <img src="/assets/profile.png" alt="homepage">
   </li>
 </ul>
 </div>
